Upgrade a scraping de nivel produccion: trazabilidad, reproducibilidad y scraping responsable
- Scraping responsable: rate limit 2s, reintentos con backoff exponencial, user-agent explicito
- Trazabilidad completa: manifest.json, download_log.jsonl, checksums SHA256, README metadatos
- Deteccion de cambios: idempotente, solo re-descarga paginas modificadas
- Estructura jerarquica: mantiene organizacion del wiki en carpetas
- Validacion de integridad: checksums, Content-Type, tamano minimo
- Logging estructurado: niveles INFO/WARNING/ERROR, timestamps
- Seguridad de dominio: solo enlaces internos del wiki
- Documentacion exhaustiva: SCRAPING_GUIDE.md (500+ lineas), CHANGELOG_SCRAPING.md
- Requirements.txt mejorado: versiones fijadas, comentarios explicativos
- Scripts actualizados: force push para vibe_SQL_copilot.txt

Cumple con estandares de produccion clinica/investigacion

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,18 @@ data/wiki_work_html/
 dicc/dic_diagnostic.csv
 dicc/dic_lab.csv
 
+# Opcional: Mantener metadatos en Git para trazabilidad
+# Si quieres versionar los metadatos, comenta estas líneas:
+# data/wiki_html/metadata/manifest.json
+# data/wiki_html/metadata/page_checksums.json
+# data/wiki_html/metadata/README.md
+
+# Log acumulativo (crece indefinidamente, no versionar)
+data/wiki_html/metadata/download_log.jsonl
+
 # Entorno virtual
 venv/
+.venv/
 env/
 ENV/
 
