--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,31 @@
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-markdownify>=0.11.6
+# Pipeline Datanex - Dependencias
+# Para entornos de producción clínica/investigación
+# Todas las versiones están fijadas para reproducibilidad
 
+# Web scraping y parsing HTML
+requests>=2.31.0,<3.0.0
+beautifulsoup4>=4.12.0,<5.0.0
+
+# Conversión HTML a Markdown
+markdownify>=0.11.6,<1.0.0
+
+# Procesamiento de datos (CSV)
+# pandas no es necesario para este proyecto, usamos CSV nativo de Python
+
+# Las siguientes librerías son parte de la librería estándar de Python 3.8+:
+# - json (metadatos estructurados)
+# - hashlib (checksums SHA256)
+# - logging (logging estructurado)
+# - pathlib (manejo de rutas)
+# - urllib.parse (parsing de URLs)
+# - datetime (timestamps)
+# - time (rate limiting)
+# - os, shutil (operaciones de archivos)
+# - re (expresiones regulares)
+# - csv (procesamiento de diccionarios)
+
+# Notas de compatibilidad:
+# - Python 3.8+ requerido para pathlib completo y typing avanzado
+# - requests 2.31.0+ incluye fixes de seguridad importantes
+# - beautifulsoup4 4.12.0+ mejora parsing de HTML moderno
+# - markdownify 0.11.6+ maneja mejor tablas HTML complejas
